# uofg-da-cal

./: LICENSE  calendar.db  index.html  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
events/: assessments.json  semesters.json
tables/: __main__.py  assessment.py  models.py  semester.py  subject.py
templates/: assessments.jinja2  semesters.jinja2
