[tool.poetry]
name = "hyperbole"
version = "0.1.0"
description = ""
authors = ["Enrico Paganin <enrico.paganin@mail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
jinja2 = "^3.1.2"
peewee = "^3.16.3"
colorhash = "^1.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
